--- a/content/pages/rules/architecture/051/index.adoc
+++ b/content/pages/rules/architecture/051/index.adoc
@@ -15,7 +15,11 @@ The organization must store the source code in a central repository.
 . [[r1]] link:https://www.iso.org/obp/ui/#iso:std:54534:en[ISO 27001:2013. Annex A - 9.4.5]
 Restrict access to application source code.
 
-. [[r2]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r2]] link:https://www.iso.org/obp/ui/#iso:std:54534:en[ISO 27001:2013. Annex A - 14.2.2]
+Control system changes during the software development life cycle using formal
+change tracking mechanisms.
+
+. [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V1.10 Malicious Software Architectural Requirements.(1.10.1)]
 Verify that a source code control system is in use,
 with procedures to ensure that check-ins are accompanied by issues or change
