--- a/content/pages/rules/certificates/088/index.adoc
+++ b/content/pages/rules/certificates/088/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/088/
 :category: certificates
 :description: This requirement establishes that the system demands digital certificates from the client during the authentication process.
-:keywords: Certificate, Digital, Client, ASVS, CWE, NIST, OWASP, PCI DSS, Rules, Ethical Hacking, Pentesting
+:keywords: Certificate, Digital, Client, ASVS, CWE, ISO, NIST, OWASP, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R088. Request client certificates
@@ -23,7 +23,12 @@ which may cause it to use a certificate that has been compromised.
 The product does not require that users should have strong passwords,
 which makes it easier for attackers to compromise user accounts.
 
-. [[r3]] link:https://pages.nist.gov/800-63-3/sp800-63b.html[NIST 800-63B 5.2.5 Verifier Impersonation Resistance].
+. [[r3]] link:https://www.iso.org/obp/ui/#iso:std:54534:en[ISO 27001:2013. Annex A - 14.1.3]
+Protect information included in application services transactions to avoid
+partial transmission, improper routing, unauthorized message modifications,
+unauthorized disclosure and unauthorized message duplication or replay.
+
+. [[r4]] link:https://pages.nist.gov/800-63-3/sp800-63b.html[NIST 800-63B 5.2.5 Verifier Impersonation Resistance].
 A verifier impersonation-resistant authentication protocol SHALL establish an
 authenticated protected channel with the verifier.
 It SHALL then strongly and irreversibly bind a channel identifier that was
@@ -32,34 +37,34 @@ authenticator output
 (e.g., by signing the two values together using a private key controlled by the
 claimant for which the public key is known to the verifier).
 
-. [[r4]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A2-Broken_Authentication[OWASP Top 10 A2:2017-Broken Authentication].
+. [[r5]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A2-Broken_Authentication[OWASP Top 10 A2:2017-Broken Authentication].
 Application functions related to authentication and session management are
 often implemented incorrectly,
 allowing attackers to compromise passwords, keys, or session tokens,
 or to exploit other implementation flaws to assume other users' identities
 temporarily or permanently.
 
-. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 Appendix C: Internet of Things Verification Requirements.(C.9)]
 Verify that wireless communications are mutually authenticated.
 
-. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V2.2 General Authenticator Requirements.(2.2.4)]
 Verify impersonation resistance against phishing,
 such as the use of multi-factor authentication, cryptographic devices with
 intent (such as connected keys with a push to authenticate),
 or at higher AAL levels, client-side certificates.
 
-. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r8]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V9.2 Server Communications Security Requirements.(9.2.4)]
 Verify that proper certification revocation, such as Online Certificate Status
 Protocol (**OCSP**) Stapling, is enabled and configured.
 
-. [[r8]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 4.1]
+. [[r9]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 4.1]
 Use strong cryptography and security protocols to safeguard sensitive
 cardholder data during transmission over open, public networks.
 Only trusted keys and certificates are accepted.
 
-. [[r9]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.10]
+. [[r10]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.10]
 Address common coding vulnerabilities in software-development processes such as
 broken authentication and session management.
