--- a/content/pages/rules/data/184/index.adoc
+++ b/content/pages/rules/data/184/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/184/
 :category: data
 :description: This requirement establishes the importance of obfuscating all sensitive data when the application is not the main focus.
-:keywords: Requirement, Security, Data, Focus, Obfuscate, Application, ASVS, CWE, OWASP, Rules, Ethical Hacking, Pentesting
+:keywords: Requirement, Security, Data, Focus, Obfuscate, Application, ASVS, CWE, ISO, OWASP, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R184. Obfuscate application data
@@ -28,7 +28,12 @@ of the personal data,
 including protection against unauthorized or unlawful processing and against
 accidental loss, destruction or damage.
 
-. [[r4]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A3-Sensitive_Data_Exposure[OWASP Top 10 A3:2017-Sensitive Data Exposure].
+. [[r4]] link:https://www.iso.org/obp/ui/#iso:std:54534:en[ISO 27001:2013. Annex A - 18.1.3]
+Protect records against loss, destruction, forgery, unauthorized access and
+unauthorized release,
+in accordance with legal, regulatory, contractual and business requirements.
+
+. [[r5]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A3-Sensitive_Data_Exposure[OWASP Top 10 A3:2017-Sensitive Data Exposure].
 Many web applications and **API**s do not properly protect sensitive data,
 such as financial, healthcare, and *PII*.
 Attackers may steal or modify such weakly protected data to conduct credit card
@@ -37,7 +42,7 @@ Sensitive data may be compromised without extra protection,
 such as encryption at rest or in transit, and requires special precautions when
 exchanged with the browser.
 
-. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V8.3 Sensitive Private Data.(8.3.4)]
 Verify that all sensitive data created and processed by the application has
 been identified,
