--- a/content/pages/rules/legal/331/index.adoc
+++ b/content/pages/rules/legal/331/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/331/
 :category: legal
 :description: This requirement establishes the importance of guaranteeing compliance with applicable legal regulations.
-:keywords: Requirement, Legal, Law, Regulation, ASVS, GDPR, Rules, Ethical Hacking, Pentesting
+:keywords: Requirement, Legal, Law, Regulation, ASVS, GDPR, ISO, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R331. Guarantee legal compliance
@@ -22,24 +22,29 @@ Where processing is carried out in accordance with a legal obligation to which
 the controller is subject, the processing should have a basis in Union or
 Member State law.
 
-. [[r2]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r2]] link:https://www.iso.org/obp/ui/#iso:std:54534:en[ISO 27001:2013. Annex A - 18.1.2]
+Implement appropriate processes to ensure compliance with legal, regulatory and
+contractual requirements related with intellectual property rights and the use
+of patented software products.
+
+. [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V1.5 Input and Output Architectural Requirements.(1.5.1)]
 Verify that input and output requirements clearly define how to handle and
 process data based on type, content, and applicable laws, regulations, and
 other policy compliance.
 
-. [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V6.1 Data Classification.(6.1.1)]
 Verify that regulated private data is stored encrypted while at rest,
 such as personally identifiable information (PII), sensitive personal
 information, or data assessed likely to be subject to EU's GDPR.
 
-. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V7.1 Log Content Requirements.(1.7.2)]
 Verify that the application does not log other sensitive data as defined under
 local privacy laws or relevant security policy.
 
-. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V8.3 Sensitive Private Data.(8.3.4)]
 Verify that all sensitive data created and processed by the application has
 been identified,
