--- a/content/pages/rules/privacy/360/index.adoc
+++ b/content/pages/rules/privacy/360/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/360/
 :category: privacy
 :description: This requirement establishes the importance of removing sensitive data after it is no longer required.
-:keywords: Sensitive, Data, Information, ASVS, GDPR, PCI DSS, Retention, Policy, Rules, Ethical Hacking, Pentesting
+:keywords: Sensitive, Data, Information, ASVS, GDPR, ISO, PCI DSS, Retention, Policy, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R360. Remove unnecessary sensitive information
@@ -32,29 +32,34 @@ Personal data shall be kept in a form which permits identification of data
 subjects for no longer than is necessary for the purposes for which the
 personal data are processed.
 
-. [[r2]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r2]] link:https://www.iso.org/obp/ui/#iso:std:54534:en[ISO 27001:2013. Annex A - 18.1.3]
+Protect records against loss, destruction, forgery, unauthorized access and
+unauthorized release,
+in accordance with legal, regulatory, contractual and business requirements.
+
+. [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V8.3 Sensitive Private Data.(8.3.8)]
 Verify that sensitive personal information is subject to data retention
 classification,
 such that old or out of date data is deleted automatically, on a schedule,
 or as the situation requires.
 
-. [[r3]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 3.1]
+. [[r4]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 3.1]
 Keep cardholder data storage to a minimum by implementing data retention and
 disposal policies, procedures and processes for secure deletion of data when no
 longer needed.
 
-. [[r4]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 3.2.1]
+. [[r5]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 3.2.1]
 Do not store the full contents of any track
 (from the magnetic stripe located on the back of a card,
 equivalent data contained on a chip, or elsewhere)
 after authorization.
 
-. [[r5]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 3.2.2]
+. [[r6]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 3.2.2]
 Do not store the card verification code or value
 (three-digit or four-digit number printed on the front or back of a payment
 card used to verify card-not-present transactions) after authorization.
 
-. [[r6]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 3.2.3]
+. [[r7]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 3.2.3]
 Do not store the personal identification number (*PIN*) or the encrypted *PIN*
 block after authorization.
