--- a/content/pages/rules/privacy/189/index.adoc
+++ b/content/pages/rules/privacy/189/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/189/
 :category: privacy
 :description: This requirement establishes the importance of specifying the purpose of the collection of personal data in order to comply with all legal obligations.
-:keywords: Data, Collection, Personal, Information, System, GDPR, Rules, Ethical Hacking, Pentesting
+:keywords: Data, Collection, Personal, Information, System, GDPR, ISO, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R189. Specify the purpose of data collection
@@ -76,7 +76,11 @@ Where processing is carried out in accordance with a legal obligation to which
 the controller is subject, the processing should have a basis in Union or
 Member State law.
 
-. [[r9]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r9]] link:https://www.iso.org/obp/ui/#iso:std:54534:en[ISO 27001:2013. Annex A - 18.1.4]
+When applicable, guarantee the privacy and security of personal information,
+as required by the relevant legislation and regulation.
+
+. [[r10]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V8.3 Sensitive Private Data.(8.3.3)]
 Verify that users are provided clear language regarding collection and use of
 supplied personal information and that users have provided opt-in consent for
