--- a/content/pages/rules/privacy/311/index.adoc
+++ b/content/pages/rules/privacy/311/index.adoc
@@ -30,3 +30,7 @@ grant of the consent.
 Where processing is based on consent, the controller shall be able to
 demonstrate that the data subject has consented to processing of his or her
 personal data.
+
+. [[r2]] link:https://www.iso.org/obp/ui/#iso:std:54534:en[ISO 27001:2013. Annex A - 18.1.4]
+When applicable, guarantee the privacy and security of personal information,
+as required by the relevant legislation and regulations.
