--- a/content/pages/rules/privacy/312/index.adoc
+++ b/content/pages/rules/privacy/312/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/312/
 :category: privacy
 :description: This requirement establishes the importance of allowing the user to revoke their consent regarding the collection of their information.
-:keywords: Requirement, Security, Data, GDPR, Consent Revocation, Regulation, Rules, Ethical Hacking, Pentesting
+:keywords: Requirement, Security, Data, GDPR, ISO, Consent Revocation, Regulation, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R312. Allow user consent revocation
@@ -44,3 +44,7 @@ of processing.
 The data subject shall have the right to object,
 on grounds relating to his or her particular situation,
 at any time to processing of personal data concerning him or her.
+
+. [[r5]] link:https://www.iso.org/obp/ui/#iso:std:54534:en[ISO 27001:2013. Annex A - 18.1.4]
+When applicable, guarantee the privacy and security of personal information,
+as required by the relevant legislation and regulations.
