--- a/content/pages/rules/privacy/343/index.adoc
+++ b/content/pages/rules/privacy/343/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/343/
 :category: privacy
-:description: This document contains the details of the security requirements related to the management and protection of data privacy in the organization. This requirement establishes the importance of respecting the users' tracking preference indicated in the Do Not Track (DNT) header.
-:keywords: Track, Preference, Header, Data, Privacy, GDPR
+:description: This requirement establishes the importance of respecting the users' tracking preference indicated in the Do Not Track (DNT) header.
+:keywords: Track, Preference, Header, Data, Privacy, GDPR, ISO, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R343. Respect the Do Not Track header
@@ -53,3 +53,7 @@ the personal data are or will be processed.
 In order for processing to be lawful,
 personal data should be processed on the basis of the consent of the data
 subject concerned or some other legitimate basis.
+
+. [[r5]] link:https://www.iso.org/obp/ui/#iso:std:54534:en[ISO 27001:2013. Annex A - 18.1.4]
+When applicable, guarantee the privacy and security of personal information,
+as required by the relevant legislation and regulations.
